--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.6
   socket_io_client: ^2.0.3+1
   cached_network_image: ^3.3.1
+  material_design_icons_flutter: ^7.0.7296
 
 
 
