--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   socket_io_client: ^2.0.3+1
   cached_network_image: ^3.3.1
   material_design_icons_flutter: ^7.0.7296
+  flutter_svg: ^2.0.10+1
 
 
 
