--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cached_network_image: ^3.3.1
   material_design_icons_flutter: ^7.0.7296
   flutter_svg: ^2.0.10+1
+  pinput: ^5.0.0
 
 
 
