--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   material_design_icons_flutter: ^7.0.7296
   flutter_svg: ^2.0.10+1
   pinput: ^5.0.0
+  mobile_scanner: ^6.0.1
+  shared_preferences: ^2.3.2
+  uuid: ^4.5.1
 
 
 
